Add notes and categories CRUD with Prisma integration
Implements API routes for notes and categories with full CRUD operations using Prisma and Supabase authentication. Adds a dashboard component for managing notes and categories, integrates react-toastify for notifications, and updates layout and login/auth flows to support the new features. Updates dependencies and configuration for Prisma, DaisyUI, and react-toastify.

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,7 @@
 # https://app.supabase.com/project/_/settings/api
 NEXT_PUBLIC_SUPABASE_URL=your-project-url
 NEXT_PUBLIC_SUPABASE_PUBLISHABLE_OR_ANON_KEY=your-anon-key
+
+# Prisma database URL (Supabase > Project Settings > Database > Connection string)
+# Example: postgresql://postgres:YOUR-PASSWORD@YOUR-HOST:5432/postgres?schema=public
+DATABASE_URL=postgresql://USER:PASSWORD@HOST:PORT/DB?schema=public
