--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "prisma:studio": "prisma studio"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.2",
+    "@mui/material": "^7.3.2",
     "@prisma/client": "^6.15.0",
     "@radix-ui/react-checkbox": "^1.3.1",
     "@radix-ui/react-dropdown-menu": "^2.1.14",
@@ -17,13 +21,14 @@
     "@radix-ui/react-slot": "^1.2.2",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
+    "@types/react-color": "^3.0.13",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "daisyui": "^5.1.6",
     "lucide-react": "^0.511.0",
     "next": "latest",
-    "next-themes": "^0.4.6",
     "react": "^19.0.0",
+    "react-color": "^2.19.3",
     "react-dom": "^19.0.0",
     "react-toastify": "^11.0.5",
     "tailwind-merge": "^3.3.0"
