--- a/package.json
+++ b/package.json
@@ -10,41 +10,41 @@
     "prisma:studio": "prisma studio"
   },
   "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.1",
-    "@mui/icons-material": "^7.3.2",
-    "@mui/material": "^7.3.2",
-    "@prisma/client": "^6.15.0",
-    "@radix-ui/react-checkbox": "^1.3.1",
-    "@radix-ui/react-dropdown-menu": "^2.1.14",
-    "@radix-ui/react-label": "^2.1.6",
-    "@radix-ui/react-slot": "^1.2.2",
-    "@supabase/ssr": "latest",
-    "@supabase/supabase-js": "latest",
-    "@types/react-color": "^3.0.13",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "daisyui": "^5.1.6",
-    "lucide-react": "^0.511.0",
-    "next": "latest",
-    "react": "^19.0.0",
-    "react-color": "^2.19.3",
-    "react-dom": "^19.0.0",
-    "react-toastify": "^11.0.5",
-    "tailwind-merge": "^3.3.0"
+    "@emotion/react": "11.14.0",
+    "@emotion/styled": "11.14.1",
+    "@mui/icons-material": "7.3.2",
+    "@mui/material": "7.3.2",
+    "@prisma/client": "6.15.0",
+    "@radix-ui/react-checkbox": "1.3.3",
+    "@radix-ui/react-dropdown-menu": "2.1.16",
+    "@radix-ui/react-label": "2.1.7",
+    "@radix-ui/react-slot": "1.2.3",
+    "@supabase/ssr": "0.7.0",
+    "@supabase/supabase-js": "2.57.0",
+    "@types/react-color": "3.0.13",
+    "class-variance-authority": "0.7.1",
+    "clsx": "2.1.1",
+    "daisyui": "5.1.6",
+    "lucide-react": "0.511.0",
+    "next": "15.5.2",
+    "react": "19.1.1",
+    "react-color": "2.19.3",
+    "react-dom": "19.1.1",
+    "react-toastify": "11.0.5",
+    "tailwind-merge": "3.3.1"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^9",
+    "@eslint/eslintrc": "3.3.1",
+    "@types/node": "20.19.12",
+    "@types/react": "19.1.12",
+    "@types/react-dom": "19.1.9",
+    "autoprefixer": "10.4.21",
+    "eslint": "9.34.0",
     "eslint-config-next": "15.3.1",
-    "postcss": "^8",
-    "prisma": "^6.15.0",
-    "tailwindcss": "^3.4.1",
-    "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5"
+    "postcss": "8.5.6",
+    "prisma": "6.15.0",
+    "tailwindcss": "3.4.17",
+    "tailwindcss-animate": "1.0.7",
+    "typescript": "5.9.2"
   }
 }
