Add pnpm support and Node.js 22 engine config
Added .npmrc and .nvmrc for package manager and Node.js version management. Updated package.json to specify pnpm as the package manager and set engine requirements for Node.js and pnpm. Removed pnpm-lock.yaml from .gitignore and added the initial pnpm-lock.yaml file.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
   "private": true,
+  "packageManager": "pnpm@9.12.3",
+  "engines": {
+    "node": "22.x",
+    "pnpm": ">=9 <10"
+  },
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
